# graphcore-poc

./: .gitignore  .gitignore~  CHANGES  LICENSE  README.md  TODO  __init__.py  setup.cfg  setup.py
examples/: animation.yaml  graph2.dot  graph_core_app.py  graphcore.cfg  sample.yaml  sample2.yaml  sample3.yaml  sample4.yaml  sample5.yaml  sample6.yaml  simulation.yaml  system.yaml  system2.yaml
gcshell/: gcshell.py
gctools/: #gcpane.py#  gceditor.py  gcpane.py
graphcore/: constraint.py  core.py  drawutil.py  editor.py  ellipse_item.py  error.py  gcconvert.py  gcpane.py~  gcparser.py  gcshell.py  gcsolver.py  genericsolver.py  graphcoreeditor.py  graphicsitem.py  graphicsscene.py  graphicsview.py  graphsettings.py  item_base.py  item_event_handler.py  layout.py  line_item.py  log4p.conf  mathutils.py  model.py  parser.out  parsetab.py  propertyeditor.py  reporter.py  script.py  script_worker.py  settings.py  shell.py  shell_gui_facade.py  solver.py  stringanalyze.py  terms.py  thread_signal.py  ui_gcpane.py  xlutils.py
graphcoreapp/: gcconverter.py  graphcoreapp.py
gui/: ConsoleDialog.ui  ConsoleWidget.ui  CoordinationFinderWidget.py  CoordinationFinderWidget.ui  GraphEditorGui.ui  MessegeWindow.ui  PostScreen.ui  ScriptEditor.ui  Ui_ColorEditorWidget.py  Ui_ColorEditorWidget.ui  Ui_ConsoleDialog.py  Ui_ConsoleDialog.ui  Ui_ConsoleWidget.py  Ui_EquationEditorDialog.py  Ui_EquationEditorDialog.ui  Ui_EquationEditorWidget.py  Ui_EquationEditorWidget.ui  Ui_LongTextEditorDialog.py  Ui_LongTextEditorDialog.ui  Ui_LongTextEditorWidget.py  Ui_LongTextEditorWidget.ui  Ui_MainWindow.py  Ui_MainWindow.ui  Ui_PreferencesDialog.py  Ui_PreferencesDialog.ui  Ui_ScriptEditor.py  Ui_ScriptEditor.ui  Ui_SolverController.py  Ui_SolverController.ui  Ui_Visualizer.py  (+18 more)
(+21 files in other folders)
