[metadata]
name = graphcore
version = attr: VERSION
license = "MIT License"

[options]
install_requires =
    networkx
    numpy
    PyQt5
    ply

[options.extras_require]
develop =
    scipy
    matplotlib

[options.entry_points]
console_scripts =
    foo = gctools.gcshell:gcshell
    foo_dev = gctools.gcshell:gcshell [develop]
    gceditor = gceditor.graphcoreeditor:main
    gcpane = gctools.gcpane:gcpane
    gcshell = gctools.gcshell:gcshell
# gui_scripts =
#     bar = tools.gceditor:gceditor
#     bar_dev = tools.gceditor:gceditor [develop]
