[metadata]
name = graphcore
version = attr: VERSION
license = "MIT License"

[options]
install_requires =
    networkx
    numpy
    PyQt5
    ply
    pyyaml

[options.extras_require]
develop =
    scipy
    matplotlib

[options.entry_points]
console_scripts =
    graphcore = graphcoreapp.graphcoreapp:main
    graphcore_dev = graphcoreapp.graphcoreapp:main [develop]
    gcpane = gctools.gcpane:gcpane
    gcshell = gctools.gcshell:gcshell
# gui_scripts =
#     bar = tools.gceditor:gceditor
#     bar_dev = tools.gceditor:gceditor [develop]
