[metadata]
name = graphcore
version = attr: VERSION
license = "GNU General Public License"

[options]
install_requires =
    networkx
    numpy
    PyQt5
    ply
    pyyaml
    openpyxl
    log4p
    pyqtgraph
    PyOpenGL

[options.extras_require]
develop =
    scipy
    matplotlib
[options.entry_points]
console_scripts =
    graphcore = graphcoreapp.graphcoreapp:main
    graphcore_dev = graphcoreapp.graphcoreapp:main [develop]
    gcsolver = gctools.gcsolver:main
    gcpane = gctools.gcpane:gcpane
    gcshell = gctools.gcshell:gcshell
